tests/snapshots/snapshots__pipeline@classes_effectful.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/classes_effectful.pr
---
== tokens ==
VOpen Class UIdent("Loud") LParen Ident("a") RParen VOpen Ident("loud") Colon LParen Ident("a") RParen Arrow KwInt VClose VSemi Instance Ident("loudInt") Colon UIdent("Loud") LParen KwInt RParen VOpen Fn Ident("loud") LParen Ident("x") RParen Eq VOpen Ident("println") LParen Ident("x") RParen VSemi Ident("x") VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("loud") LParen Int(IntLit { value: 3, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Loud",
            param: "a",
            supers: [],
            methods: [
                ClassMethod {
                    name: "loud",
                    ty: Fun(
                        [
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Int,
                    ),
                    span: 16..20,
                },
            ],
            span: 0..33,
        },
    ],
    instances: [
        InstanceDecl {
            name: "loudInt",
            class: "Loud",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "loud",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: Let(
                            "_",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "println",
                                        ),
                                        span: 83..90,
                                    },
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 91..92,
                                        },
                                    ],
                                ),
                                span: 83..93,
                            },
                            Spanned {
                                node: Var(
                                    "x",
                                ),
                                span: 98..99,
                            },
                        ),
                        span: 83..99,
                    },
                    wheres: [],
                    span: 66..99,
                },
            ],
            module: "",
            span: 35..99,
        },
    ],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "loud",
                        ),
                        span: 113..117,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 3,
                                    suffix: None,
                                },
                            ),
                            span: 118..119,
                        },
                    ],
                ),
                span: 113..120,
            },
            wheres: [],
            span: 101..120,
        },
    ],
}

== types ==
[E3006] Type Error: instance method `loudInt.loud` performs IO, which the class method signature does not permit; a universally quantified effect row obligates parametricity, not permission to choose a concrete effect
   ╭─[ <source>:6:5 ]
   │
 6 │ ╭─▶     println(x)
 7 │ ├─▶     x
   │ │           
   │ ╰─────────── instance method `loudInt.loud` performs IO, which the class method signature does not permit; a universally quantified effect row obligates parametricity, not permission to choose a concrete effect
───╯
